--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -37,7 +37,7 @@ $button-height: 3rem;
 $section-rounded-border-radius: $border-radius-big;
 $section-rounded-padding: 1rem;
 
-$fonts-path: "assets/fonts" !default;
+$fonts-path: "/assets/fonts" !default;
 $tgico-font-family: "tgico" !default;
 $tgico-font-path: $fonts-path;
 
